add-input-text-component-using-control-value-accessor add-automatic-form-validation add-new-page-to-test-input-text-component-with-automatic-form-validation

--- a/projects/angular-enterprise-app/public/i18n/ar.json
+++ b/projects/angular-enterprise-app/public/i18n/ar.json
@@ -7,7 +7,9 @@
         },
         "footer": {},
         "left-side-bar": {
-            "coming-soon": "قريباً"
+            "coming-soon": "قريباً",
+            "forms": "نماذج الإدخال",
+            "input-reactive-forms": "نماذج الإدخال التفاعلية"
         },
         "header-settings": {
             "language": "اللغة",
