--- a/projects/angular-enterprise-app/public/i18n/en.json
+++ b/projects/angular-enterprise-app/public/i18n/en.json
@@ -32,5 +32,14 @@
         "regularExpression": "Please enter a valid value",
         "maxlength": "Please enter a value with no more than {{requiredLength}} characters. ({{actualLength}}/{{requiredLength}})",
         "minlength": "Please enter a value more than {{requiredLength}} characters. ({{actualLength}}/{{requiredLength}})"
+    },
+    "forms": {
+        "input-reactive-forms": {
+            "first-name": "First Name*:",
+            "last-name": "Last Name*:",
+            "email-address": "Email Address*:",
+            "fathers-name": "Father's Name*:",
+            "mothers-name": "Mother's Name*:"
+        }
     }
 }
